--- a/#src/common/promo-header/promo-header.scss
+++ b/#src/common/promo-header/promo-header.scss
@@ -1,5 +1,8 @@
 .promo-header {
     &__slider {
+        @media (max-width: $md3+px) {
+            overflow: visible;
+        }
     }
 
     &__body {
