--- a/#src/common/quiz/quiz.scss
+++ b/#src/common/quiz/quiz.scss
@@ -4,6 +4,7 @@
 
         @media (max-width: $md3+px) {
             margin-bottom: 24px;
+            overflow: visible;
         }
 
         & .swiper-slide {
