--- a/#src/common/buttons/buttons.scss
+++ b/#src/common/buttons/buttons.scss
@@ -11,8 +11,7 @@
     font-size: 1.6rem;
     line-height: 1.31em;
     letter-spacing: -0.02em;
-    transition: all 0s ease 0s;
-    transition: all .3s ease;
+    transition: all 0.15s ease-in-out;
 
     @media (min-width: 992px) {
         &:hover {
