--- a/#src/common/frequently-questions/frequently-questions.scss
+++ b/#src/common/frequently-questions/frequently-questions.scss
@@ -45,13 +45,11 @@
     border-radius: 4rem;
     color: #fff;
     padding: 4.8rem;
-    transition: all 0.3s ease;
+    transition: all 0.15s ease-in-out;
 
-    @media (min-width: 992px) {
-        &:hover {
-            background-color: $mainColor;
-            color: #fff;
-        }
+    &:hover {
+        background-color: $mainColor;
+        color: #fff;
     }
 
     @media (max-width: $md2+px) {
@@ -72,16 +70,16 @@
     }
 
     &__icon {
-        width: 3.2rem;
+        font-size: 3.2rem;
 
         @media (max-width: $md2+px) {
-            width: 24px;
+            font-size: 24px;
         }
 
         & img,
         & svg {
-            width: 100%;
-            height: auto;
+            width: 1em;
+            height: 1em;
         }
     }
 }
