--- a/#src/common/post-card/post-card.scss
+++ b/#src/common/post-card/post-card.scss
@@ -6,6 +6,7 @@
     color: $textColor;
     overflow: hidden;
     border-radius: 4rem;
+    position: relative;
 
     @media (max-width: $md2+px) {
         border-radius: 24px;
@@ -13,7 +14,9 @@
 
     @media (min-width: 992px) {
         &:hover {
-            background: linear-gradient(98.67deg, #179b97 0.55%, #09cac3 96.7%);
+            &:before {
+                opacity: 1;
+            }
 
             & * {
                 color: #fff !important;
@@ -21,7 +24,22 @@
         }
     }
 
+    &:before {
+        position: absolute;
+        content: '';
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        background: linear-gradient(98.67deg, #179b97 0.55%, #09cac3 96.7%);
+        opacity: 0;
+        transition: all .15s ease-in-out;
+    }
+
     &__img {
+        position: relative;
+        z-index: 2;
         height: 0;
         padding-bottom: 68.23%;
 
@@ -31,6 +49,8 @@
     }
 
     &__text-wrap {
+        position: relative;
+        z-index: 3;
         padding: 1.6rem 2.4rem 4rem;
         flex: 1 1 auto;
         display: flex;
