--- a/#src/common/slider-buttons/slider-buttons.scss
+++ b/#src/common/slider-buttons/slider-buttons.scss
@@ -17,7 +17,7 @@
     color: #fff;
     padding: 0.5rem;
     cursor: pointer;
-    transition: all .3s ease;
+    transition: all .15s ease-in-out;
 
     &:hover {
         opacity: 0.7;
@@ -37,7 +37,8 @@
     }
 
     & svg, & img {
-
+        height: 1em;
+        width: 1em;
     }
 
     &--prev {
