--- a/#src/common/team-carousel/team-carousel.scss
+++ b/#src/common/team-carousel/team-carousel.scss
@@ -2,13 +2,6 @@
     &__slider {
         position: relative;
 
-        @media (max-width: $md2+px) {
-            margin: 0 -32px;
-        }
-        @media (max-width: $md3+px) {
-            margin: 0 -16px;
-        }
-
         &:before {
             position: absolute;
             content: "";
@@ -63,7 +56,7 @@
     height: 76.9rem;
     position: relative;
     padding-top: 4rem;
-    transition: all 0.3s ease;
+    transition: all 0.15s ease-in-out;
 
     @media (max-width: $md2+px) {
         width: 456px;
@@ -105,9 +98,14 @@
             width: 32px;
         }
 
-        & img {
-            width: 100%;
-            height: auto;
+        & img, & svg {
+            width: 4rem;
+            height: 4rem;
+
+            @media (max-width: $md3+px) {
+                width: 32px;
+                height: 32px;
+            }
         }
     }
 
