--- a/#src/common/header/header.scss
+++ b/#src/common/header/header.scss
@@ -169,6 +169,9 @@
     &__btn {
         flex: 0 0 auto;
 
+        &.btn {
+            font-size: 1.6rem;
+        }
         @media (max-width: $md2+px) {
             display: none;
         }
@@ -189,6 +192,25 @@
     }
 }
 
+.menu-overlay {
+    @media (max-width: $md2+px) {
+        position: absolute;
+        top: 0;
+        left: 100%;
+        z-index: 1;
+        width: 100vw;
+        height: 100vh;
+        background-color: rgba(#000, 0.4);
+        transform: translateX(0%);
+        transition: transform 0.3s ease-in-out;
+    
+        &.menu-is-open {
+            transition: transform 0.3s ease-in-out 0.15s;
+            transform: translateX(-100%);
+        }
+    }
+
+}
 .menu {
     @media (min-width: 992px) {
         height: auto !important;
@@ -209,24 +231,9 @@
         &--open {
             transform: translateX(-100%);
             box-shadow: -4px 0px 10px rgba(0, 0, 0, 0.25);
-
-            & .menu__overlay {
-                transition: all 0.3s ease-in-out 0.15s;
-                transform: translateX(0%);
-            }
         }
     }
-    &__overlay {
-        position: absolute;
-        top: 0;
-        right: 0;
-        z-index: 1;
-        width: 100vw;
-        height: 100vh;
-        background-color: rgba(#000, 0.4);
-        transform: translateX(100%);
-        transition: all 0.3s ease-in-out;
-    }
+
     &__top-line {
         height: 52px;
         background-color: $mainColor;
@@ -339,6 +346,7 @@
         background-color: #fff;
         position: relative;
         z-index: 2;
+        box-shadow: 0 0 10px 0 rgba($mainColor, 0.1);
         @media (min-width: 992px) {
             display: none;
         }
