--- a/#src/common/promo-header/promo-header.scss
+++ b/#src/common/promo-header/promo-header.scss
@@ -1,5 +1,16 @@
 .promo-header {
     &__slider {
+        padding-top: 1.4rem;
+
+        &.swiper-fade {
+            & .swiper-slide {
+                opacity: 0 !important;
+    
+                &.swiper-slide-active {
+                    opacity: 1 !important;
+                }
+            }
+        }
         @media (max-width: $md3+px) {
             overflow: visible;
         }
@@ -15,7 +26,7 @@
             padding: 7.2rem 11.6rem;
             border-radius: 4rem;
             overflow: hidden;
-            min-height: 60rem;
+            min-height: 59.5rem;
         }
 
         @media (max-width: $md2+px) {
@@ -33,7 +44,7 @@
         font-weight: 300;
         font-size: 6.4rem;
         line-height: 1.12em;
-        letter-spacing: -0.03em;
+        letter-spacing: -0.035em;
         margin-bottom: 2.4rem;
         max-width: 70.8rem;
 
@@ -70,8 +81,8 @@
         font-weight: 400;
         font-size: 2.6rem;
         line-height: 1.31em;
-        letter-spacing: -0.02em;
-        margin-bottom: 4rem;
+        letter-spacing: -0.025em;
+        margin-bottom: 3.8rem;
 
         @media (max-width: $md2+px) {
             font-weight: 400;
@@ -94,7 +105,7 @@
 
         &.btn {
             @media (min-width: 992px) {
-                min-width: 27.7rem;
+                min-width: 27.5rem;
                 align-self: flex-start;
             }
         }
