--- a/#src/common/quiz/quiz.scss
+++ b/#src/common/quiz/quiz.scss
@@ -79,6 +79,10 @@
             & > * {
                 margin: 0 1.2rem;
 
+                @media (min-width: 768px) {
+                    min-width: 22.9rem;
+                }
+
                 @media (max-width: $md3+px) {
                     margin: 0 0 12px;
 
