--- a/#src/common/form/form.scss
+++ b/#src/common/form/form.scss
@@ -134,7 +134,10 @@
         &:checked ~ {
             & .checkbox-radio__square {
                 background-color: $secondColor;
-                background-image: url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOCIgdmlld0JveD0iMCAwIDEyIDgiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CjxwYXRoIGQ9Ik0xLjUgM0w1LjUgN0wxMC41IDEuNSIgc3Ryb2tlPSJ3aGl0ZSIgc3Ryb2tlLXdpZHRoPSIxLjUiIHN0cm9rZS1saW5lY2FwPSJyb3VuZCIgc3Ryb2tlLWxpbmVqb2luPSJyb3VuZCIvPgo8L3N2Zz4K");
+                
+                &:before {
+                    opacity: 1;
+                }
             }
         }
     }
@@ -146,11 +149,24 @@
         border: 1px solid $secondColor;
         margin-right: 0.8rem;
         border-radius: 0.4rem;
-        background-position: center;
-        background-size: 85%;
-        background-repeat: no-repeat;
         transform: translateY(11%);
         transition: all .15s ease-in-out;
+
+        &:before {
+            position: absolute;
+            content: '';
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 2;
+            transition: all .15s ease-in-out;
+            background-image: url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOCIgdmlld0JveD0iMCAwIDEyIDgiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CjxwYXRoIGQ9Ik0xLjUgM0w1LjUgN0wxMC41IDEuNSIgc3Ryb2tlPSJ3aGl0ZSIgc3Ryb2tlLXdpZHRoPSIxLjUiIHN0cm9rZS1saW5lY2FwPSJyb3VuZCIgc3Ryb2tlLWxpbmVqb2luPSJyb3VuZCIvPgo8L3N2Zz4K");
+            background-position: center;
+            background-size: 85%;
+            background-repeat: no-repeat;
+            opacity: 0;
+        }
     }
 
     &__text {
