--- a/#src/common/post-card/post-card.scss
+++ b/#src/common/post-card/post-card.scss
@@ -18,7 +18,7 @@
                 opacity: 1;
             }
 
-            & * {
+            & .post-card__title, & .post-card__text, & .post-card__more {
                 color: #fff !important;
             }
         }
@@ -68,7 +68,7 @@
         line-height: 1.31em;
         letter-spacing: -0.02em;
         margin-bottom: 0.8rem;
-
+        transition: all .15s ease-in-out;
         @media (max-width: $md2+px) {
             font-size: 20px;
             line-height: 24px;
@@ -77,7 +77,7 @@
 
     &__text {
         margin-bottom: 0.8rem;
-
+        transition: all .15s ease-in-out;
         @media (max-width: $md2+px) {
             margin-bottom: 0.4rem;
         }
@@ -92,5 +92,6 @@
         letter-spacing: -0.02em;
         text-decoration-line: underline;
         color: $secondColor;
+        transition: all .15s ease-in-out;
     }
 }
