--- a/#src/common/buttons/buttons.scss
+++ b/#src/common/buttons/buttons.scss
@@ -25,6 +25,8 @@
 
     @media (max-width: $md3+px) {
         width: 100%;
+        font-size: 16px;
+        line-height: 18px;
     }
 
     &--dark {
