--- a/#src/common/footer/footer.scss
+++ b/#src/common/footer/footer.scss
@@ -100,7 +100,8 @@
         & > li {
             font-size: 1.6rem;
             line-height: 1.75em;
-
+            letter-spacing: -0.025em;
+            
             @media (max-width: $md3+px) {
                 font-size: 14px;
                 line-height: 24px;
