--- a/#src/common/frequently-questions/frequently-questions.scss
+++ b/#src/common/frequently-questions/frequently-questions.scss
@@ -67,6 +67,7 @@
         font-size: 2.8rem;
         line-height: 1.28em;
         margin-bottom: 3.2rem;
+        letter-spacing: -0.025em;
 
         @media (max-width: $md2+px) {
             font-size: 18px;
