--- a/#src/scss/base.scss
+++ b/#src/scss/base.scss
@@ -44,7 +44,7 @@ body {
 	font-weight: 400;
 	font-size: 2rem;
 	line-height: 1.6em;
-	letter-spacing: -0.02em;
+	letter-spacing: -0.025em;
 	transition: opacity 0.8s ease;
 	position: relative;
 	min-height: 100%;
@@ -133,14 +133,13 @@ h1 {
 h2 {
 	font-size: 4.4rem;
 	line-height: 1.14em;
-	letter-spacing: -0.02em;
+	letter-spacing: -0.025em;
 	font-weight: 400;
 
 	@media (max-width: $md3+px) {
 		font-weight: 600;
 		font-size: 28px;
 		line-height: 1.14em;
-		letter-spacing: -0.02em;
 	}
 }
 
@@ -148,7 +147,7 @@ h3 {
 	font-weight: 600;
 	font-size: 3.2rem;
 	line-height: 1.06em;
-	letter-spacing: -0.02em;
+	letter-spacing: -0.025em;
 
 	@media (max-width: $md2+px) {
 		font-size: 24px;
@@ -160,21 +159,21 @@ h4 {
 	font-weight: 600;
 	font-size: 2.6rem;
 	line-height: 1.08em;
-	letter-spacing: -0.02em;
+	letter-spacing: -0.025em;
 }
 
 h5 {
 	font-weight: 600;
 	font-size: 2.4rem;
 	line-height: 1.17em;
-	letter-spacing: -0.02em;
+	letter-spacing: -0.025em;
 }
 
 h6 {
 	font-weight: 500;
 	font-size: 2.2rem;
 	line-height: 1.31em;
-	letter-spacing: -0.02em;
+	letter-spacing: -0.025em;
 }
 
 p,
@@ -468,13 +467,17 @@ figure {
 	&--md {
 		font-size: 1.8rem;
 		line-height: 1.33em;
-		letter-spacing: -0.02em;
+		letter-spacing: -0.025em;
 	}
 
 	&--sm {
 		font-size: 1.6rem;
 		line-height: 1.25em;
-		letter-spacing: -0.02em;
+		letter-spacing: -0.025em;
+
+		@media (max-width: $md3+px) {
+			line-height: 1.5em;
+		}
 	}
 
 	& h1,
