--- a/#src/common/frequently-questions/frequently-questions.scss
+++ b/#src/common/frequently-questions/frequently-questions.scss
@@ -10,6 +10,10 @@
             margin-bottom: 0;
         }
 
+        @media (max-width: $md3+px) {
+            margin-bottom: 12px;
+        }
+
         & > li {
             flex: 0 1 calc(50% - 2.4rem);
             margin-bottom: 4.8rem;
@@ -29,6 +33,27 @@
             &:nth-child(even) {
                 @media (min-width: 992px) {
                     transform: translateY(-9.8rem);
+                }
+            }
+        }
+    }
+
+    &__list-collapse {
+        display: none;
+
+        @media (min-width: 992px) {
+            margin-top: -9.8rem;
+            padding-bottom: 9.8rem;
+
+            & .frequently-questions__list {
+                & li {
+                    &:nth-child(even) {
+                        transform: translateY(0);
+                    }
+
+                    &:nth-child(odd) {
+                        transform: translateY(9.8rem);
+                    }
                 }
             }
         }
