--- a/#src/common/frequently-questions/frequently-questions.scss
+++ b/#src/common/frequently-questions/frequently-questions.scss
@@ -77,6 +77,7 @@
     color: #fff;
     padding: 4.8rem;
     transition: all 0.15s ease-in-out;
+    cursor: pointer;
 
     &--is-open {
         background-color: $mainColor;
