--- a/#src/common/video-testimonials/video-testimonials.scss
+++ b/#src/common/video-testimonials/video-testimonials.scss
@@ -53,6 +53,27 @@
         @media (max-width: $md3+px) {
             padding-bottom: 54.87%;
         }
+
+        & video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        & iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        & > * {
+            pointer-events: none;
+        }
     }
 
     &__bottom {
