--- a/#src/common/video-testimonials/video-testimonials.scss
+++ b/#src/common/video-testimonials/video-testimonials.scss
@@ -76,6 +76,47 @@
         }
     }
 
+    &__grid-item-text {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 3;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        padding: 3rem 3rem;
+        font-size: 2.6rem;
+        pointer-events: none;
+
+        @media (max-width: $md3+px) {
+            padding: 10px 10px;
+            font-size: 16px;
+
+        }
+
+        & span {
+            position: relative;
+            z-index: 2;
+        }
+
+        &:before {
+            position: absolute;
+            content: "";
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 35%;
+            z-index: 1;
+            background: linear-gradient(
+                to bottom,
+                rgba(0, 0, 0, 0) 0%,
+                rgba(0, 0, 0, 1) 100%
+            ); 
+        }
+    }
+
     &__bottom {
         display: flex;
         align-items: center;
