--- a/#src/common/team-carousel/team-carousel.scss
+++ b/#src/common/team-carousel/team-carousel.scss
@@ -83,6 +83,12 @@
         }
     }
 
+    &__body {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+    }
+
     &__calendar {
         position: absolute;
         z-index: 4;
