--- a/#src/common/team-carousel/team-carousel.scss
+++ b/#src/common/team-carousel/team-carousel.scss
@@ -93,15 +93,18 @@
         position: absolute;
         z-index: 4;
         top: 4rem;
-        right: 3.2rem;
-        width: 4rem;
+        right: 1.2rem;
+        width: 8rem;
         transition: all 0.3s ease;
         opacity: 0.8;
+        padding: 2rem;
+        padding-top: 0;
 
         @media (max-width: $md3+px) {
             top: 24px;
-            right: 8px;
-            width: 32px;
+            right: -8px;
+            width: 64px;
+            padding: 0 16px 16px;
         }
 
         & img, & svg {
