--- a/#src/common/rating/rating.scss
+++ b/#src/common/rating/rating.scss
@@ -1,6 +1,7 @@
 .rating {
     position: relative;
     font-size: 3.2rem;
+    line-height: 1em;
     color: #F5D62F;
     display: inline-block;
 
