--- a/#src/scss/_vars.scss
+++ b/#src/scss/_vars.scss
@@ -16,6 +16,7 @@ $md4: 479.98;
 
 $textColor: #2F2F2F;
 $textColorSecondary: #0ABEB9;
+$textColorThird: #6B6B6B;
 $hover: #0cd3cc;
 $active: #037847;
 $mainColor: #2F2F2F;
