--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -48,9 +48,15 @@
 @import "../common/rating/rating";
 @import "../common/documents-section/documents-section";
 @import "../common/cta/cta";
+@import "../common/breadcrumbs/breadcrumbs";
+@import "../common/team-list/team-list";
+@import "../common/team-card/team-card";
+@import "../common/testimonials/testimonials";
+@import "../common/testimonial-card/testimonial-card";
 // ==== // COMMON BLOCKS =====================================================
 
 // ==== PAGES =====================================================
 @import "pages/home";
+@import "pages/services";
 // ==== AND PAGES =====================================================
 
