--- a/#src/common/buttons/buttons.scss
+++ b/#src/common/buttons/buttons.scss
@@ -15,7 +15,7 @@
     box-shadow: none !important;
 
     @media (min-width: 992px) {
-        &:hover {
+        &:hover:not(.tab-active):not(.not-hover) {
             opacity: 0.7;
         }
     }
@@ -84,5 +84,53 @@
 
     &--transparent {
         background-color: transparent !important;
+    }
+
+    &--second {
+        border-color: #DCDCDC;
+        background: #DCDCDC;
+        color: $textColorThird;
+        min-width: auto;
+        padding: 1.2rem 2.4rem;
+        min-height: 4.8rem;
+
+        @media (max-width: $md3+px) {
+            font-size: 12px;
+            padding: 8px 16px;
+            min-height: 36px;
+        }
+
+        &.tab-active {
+            background: $mainColor;
+            color: #fff;
+            opacity: 1 !important;
+        }
+    }
+}
+
+
+.buttons-group {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 1.6rem;
+    padding-left: 0;
+
+    @media (max-width: $md3+px) {
+        margin-bottom: 20px;
+    }
+
+    & > li {
+        margin-bottom: 2.4rem;
+
+        @media (max-width: $md3+px) {
+            margin-bottom: 12px;
+        }
+        &:not(:last-child) {
+            margin-right: 2.4rem;
+
+            @media (max-width: $md3+px) {
+                margin-right: 8px;
+            }
+        }
     }
 }
