--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -58,5 +58,7 @@
 // ==== PAGES =====================================================
 @import "pages/home";
 @import "pages/services";
+@import "pages/team";
+@import "pages/testimonials";
 // ==== AND PAGES =====================================================
 
