--- a/#src/common/form/form.scss
+++ b/#src/common/form/form.scss
@@ -99,26 +99,27 @@
     display: flex;
     align-items: center;
     width: 100%;
-    background: rgba(40, 83, 143, 0.05);
-    border-radius: 0.8rem;
-    height: 10rem;
-    padding: 0.8rem 1.5rem;
-    border: 1px solid transparent;
+    background: transparent;
+    border-radius: 2.4rem;
+    height: 22.4rem;
+    padding: 2.4rem 1.6rem;
+    border: 2px solid $mainColor;
     outline: none;
-    font-size: 1.4rem;
-    line-height: 1.58em;
-    letter-spacing: 0.05em;
-    font-weight: 400;
+    font-weight: 500;
+    font-size: 1.8rem;
+    line-height: 1em;
     letter-spacing: -0.025em;
+    resize: none;
 
-    &:focus {
-        border-color: $secondColor;
+
+    @media (max-width: $md3+px) {
+        height: 200px;
+        padding: 25px 24px;
+        font-size: 16px;
     }
 
     &::placeholder {
-        font-size: 14px;
-        font-weight: 400;
-        letter-spacing: 0.05em;
+        color: #9d9d9d;
     }
 }
 
@@ -175,6 +176,7 @@
         font-size: 1.4rem;
         line-height: 1.43em;
         color: #555555;
+        letter-spacing: -0.025em;
 
         & a {
             color: $secondColor;
