--- a/#src/common/testimonial-card/testimonial-card.scss
+++ b/#src/common/testimonial-card/testimonial-card.scss
@@ -67,6 +67,21 @@
     }
 
     &__source {
+        margin-bottom: 1.6rem;
+        font-size: 1.6rem;
+        line-height: 1.5em;
+        letter-spacing: -0.025em;
+
+        @media (max-width: $md3+px) {
+            margin-bottom: 12px;
+            font-size: 14px;
+            line-height: 16px;
+        }
+
+        & a {
+            color: $secondColor;
+            text-decoration: underline;
+        }
     }
 
     &__text {
