--- a/#src/common/video-testimonials/video-testimonials.scss
+++ b/#src/common/video-testimonials/video-testimonials.scss
@@ -35,6 +35,12 @@
                     grid-column: span 2;
                     grid-row: span 2;
                 }
+
+                & .video-testimonials__grid-item-text {
+                    @media (min-width: 768px) {
+                        font-size: 2.6rem;
+                    }
+                }
             }
 
             &:not(:nth-child(1)):not(:nth-child(2)) {
@@ -86,8 +92,8 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
-        padding: 3rem 3rem;
-        font-size: 2.6rem;
+        padding: 1.5rem 3rem;
+        font-size: 2rem;
         pointer-events: none;
 
         @media (max-width: $md3+px) {
