--- a/#src/scss/_vars.scss
+++ b/#src/scss/_vars.scss
@@ -25,11 +25,11 @@ $dangerColor:  #FF4444;
 $successColor:#00C367;
 $infoColor: #BC62EF;
 $lightColor: #fff;
-$warningColor: #FFC31C;
+$warningColor: #E52D65;
 $bg: #F3F1EF;
 $bgSecondary: #EBE8E4;
 $bgSecondaryHover: #cdcac7;
-$borderColor: #D2D2D2;
+$borderColor: #D9D9D9;
 
 
 :root {
@@ -37,7 +37,7 @@ $borderColor: #D2D2D2;
     --bs-secondary: #0ABEB9;
     --bs-success: #00C367;
     --bs-info: #BC62EF;
-    --bs-warning: #FFC31C;
+    --bs-warning: #E52D65;
     --bs-danger: #FF4444;
     --bs-light: #fff;
     --bs-dark: #000;
@@ -46,7 +46,7 @@ $borderColor: #D2D2D2;
     --bs-secondary-rgb: 10, 190, 185;
     --bs-success-rgb: 0, 195, 103;
     --bs-info-rgb: 188, 98, 239;
-    --bs-warning-rgb: 255, 195, 28;
+    --bs-warning-rgb: 229, 45, 101;
     --bs-danger-rgb: 255, 68, 68;
     --bs-light-rgb: 255, 255, 255;
     --bs-dark-rgb: 0, 0, 0;
