--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -53,6 +53,8 @@
 @import "../common/team-card/team-card";
 @import "../common/testimonials/testimonials";
 @import "../common/testimonial-card/testimonial-card";
+@import "../common/main-grid/main-grid";
+@import "../common/info-cards-list/info-cards-list";
 // ==== // COMMON BLOCKS =====================================================
 
 // ==== PAGES =====================================================
@@ -60,5 +62,6 @@
 @import "pages/services";
 @import "pages/team";
 @import "pages/testimonials";
+@import "pages/services-detail";
 // ==== AND PAGES =====================================================
 
