--- a/#src/common/quiz/quiz.scss
+++ b/#src/common/quiz/quiz.scss
@@ -1,38 +1,10 @@
 .quiz {
-    &__body {
-        margin-bottom: 5.6rem;
-
-        @media (max-width: $md3+px) {
-            margin-bottom: 24px;
-            overflow: visible;
-        }
-
-        & .swiper-slide {
-            height: auto;
-        }
-
-        &.show-loader {
-            opacity: 0.6;
-            pointer-events: none;
-            
-            &:before {
-                position: absolute;
-                content: '';
-                z-index: 10;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                height: 50px;
-                width: 50px;
-                border-radius: 50%;
-                border: 4px solid #6e6e6e;
-                border-right: 4px solid #fff;
-                animation: preloadBody 2s linear infinite;
-            }
+    & .container-sm {
+        @media (max-width: $md2+px) {
+            width: 100%;
         }
     }
-
-    &__cards-group {
+    &__head {
         @media (min-width: 768px) {
             display: flex;
             justify-content: space-between;
@@ -51,50 +23,197 @@
         }
     }
 
-    &__message {
+    &__content {
+        display: none;
+    }
+
+    &__content-body {
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
+        flex-wrap: wrap;
+        margin: 0 -0.8rem -1.6rem;
+    }
+
+    &__content-col {
+        flex: 0 1 33.333333%;
+        padding: 0 0.8rem;
+        margin-bottom: 1.6rem;
+
+        @media (max-width: $md2+px) {
+            flex: 0 1 100%;
+        }
+    }
+
+    &__content-bottom {
+        text-align: center;
+        padding-top: 5.6rem;
+
+        @media (max-width: $md3+px) {
+            padding-top: 24px;
+        }
+    }
+
+    &__btn-back {
+        min-width: 22.9rem;
+    }
+
+    &--show-content {
+        & .quiz__head {
+            display: none;
+        }
+
+        & .quiz__content.active {
+            display: block;
+        }
+    }
+}
+
+.quiz-content-card {
+    background: #ffffff;
+    border-radius: 4rem;
+    padding: 4rem 3.2rem 6rem;
+    height: 100%;
+    transition: all .3s ease;
+
+
+
+    @media (max-width: $md3+px) {
+        padding: 24px 16px;
+        border-radius: 24px;
     }
 
     &__title {
+        margin-bottom: 1.6rem;
+
+        @media (max-width: $md3+px) {
+            margin-bottom: 8px;
+        }
     }
 
-    &__buttons {
-        & .swiper-slide {
+    &__price-list {
+        padding-left: 0;
+        margin-bottom: 0;
+        & > li {
+            padding: 1.6rem 0;
+            border-top: 1px solid $borderColor;
             display: flex;
-            justify-content: center;
-            opacity: 0 !important;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 1.8rem;
+            line-height: 1.56em;
+            letter-spacing: -0.025em;
 
             @media (max-width: $md3+px) {
-                flex-direction: column;
+                padding: 8px 0;
+                font-size: 14px;
             }
 
-            &.swiper-slide-active {
-                opacity: 1 !important;
+            &:first-child {
+                padding-top: 0;
+                border-top: none;
             }
 
-            & > * {
-                margin: 0 1.2rem;
+            & a {
+                font-weight: 500;
+                text-decoration: underline;
+                color: $secondColor;
+            }
 
-                @media (min-width: 768px) {
-                    min-width: 22.9rem;
-                }
+            & p {
+                margin-bottom: 0;
+                max-width: 30.8rem;
+            }
+        }
+    }
+
+    &__posts {
+        padding-left: 0;
+        margin-bottom: 0;
+
+        & > li {
+            display: flex;
+
+            &:not(:last-child) {
+                margin-bottom: 2.4rem;
 
                 @media (max-width: $md3+px) {
-                    margin: 0 0 12px;
-
-                    &:last-child {
-                        margin-bottom: 0;
-                    }
+                    margin-bottom: 16px;
                 }
             }
         }
     }
 
-    &__submit {
+    &__posts-img {
+        flex: 0 0 auto;
+        width: 15.2rem;
+        height: 11.2rem;
+        margin-right: 1.6rem;
+        overflow: hidden;
+        border-radius: 0.8rem;
+
+        @media (max-width: $md3+px) {
+            width: 110px;
+            height: 90px;
+        }
+    }
+
+    &__posts-text-wrap {
+        flex: 1 1 auto;
+        font-size: 1.8rem;
+        line-height: 1.33em;
+        letter-spacing: -0.025em;
+
+        @media (max-width: $md3+px) {
+            font-size: 14px;
+        }
+        
+    }
+
+    &__posts-title {
+        font-weight: 500;
+        margin-bottom: 0.4rem;
+    }
+
+    &__posts-link {
+        color: $textColorThird;
+        font-weight: 500;
+        margin-bottom: 1.2rem;
+        text-decoration: underline;
+        display: block;
+    }
+
+    &__posts-views {
+        display: flex;
+        align-items: center;
+        color: $textColorThird;
+
+        & svg {
+            flex: 0 0 auto;
+            width: 1.6rem;
+            height: 1.6rem;
+            margin-right: 0.8rem;
+        }
+    }
+
+    &__text {
+        color: $textColorThird;
+        line-height: 1.4em;
+        margin-bottom: 2.8rem;
+
+        @media (max-width: $md3+px) {
+            font-size: 14px;
+            margin-bottom: 16px;
+        }
+    }
+
+    & .cta__form-items {
+        max-width: 37.4rem;
+    }
+
+    & .cta__form-item {
+        margin-bottom: 1.6rem;
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 }
 
@@ -110,6 +229,13 @@
     padding: 3.9em 2.4em;
     color: #fff;
     cursor: pointer;
+    transition: all .15s ease-in-out;
+
+    @media (min-width: 992px) {
+        &:hover {
+            box-shadow: 0 0 15px rgba($secondColor, 0.2);
+        }
+    }
 
     @media (max-width: $md2+px) {
         font-size: 6px;
@@ -122,17 +248,18 @@
         border-radius: 24px;
     }
 
+    &.active {
+        & .quiz-card__text-wrap .quiz-card__circle:before {
+            opacity: 1;
+        }
+    }
+
     &__radio {
         position: absolute;
         z-index: -1;
         opacity: 0;
         visibility: hidden;
 
-        &:checked ~ {
-            & .quiz-card__text-wrap .quiz-card__circle:before {
-                opacity: 1;
-            }
-        }
     }
 
     &__img {
