--- a/#src/common/services-card/services-card.scss
+++ b/#src/common/services-card/services-card.scss
@@ -29,6 +29,12 @@
         }
     }
 
+    &__inner {
+        @media (max-width: $md3+px) {
+            position: relative;
+        }
+    }
+
     &__body {
         position: relative;
         z-index: 2;
@@ -67,6 +73,7 @@
             line-height: 24px;
             margin-bottom: 4px;
         }
+        
     }
 
     &__price {
@@ -82,6 +89,18 @@
 
         & strong {
             font-weight: 700;
+        }
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    &__label {
+        margin-bottom: 2.4rem;
+
+        &:last-child {
+            margin-bottom: 0;
         }
     }
 
@@ -100,6 +119,72 @@
         @media (min-width: 992px) {
             &:hover {
                 opacity: 0.7;
+            }
+        }
+    }
+
+    &--big {
+        & .services-card__body {
+            min-height: 48rem;
+
+            @media (max-width: $md3+px) {
+                min-height: 200px;
+                padding: 16px;
+            }
+        }
+
+        & .services-card__bg {
+            @media (max-width: $md3+px) {
+                position: absolute;
+                padding-bottom: 0;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        & .services-card__title {
+            margin-bottom: 2.4rem;
+
+            @media (max-width: $md3+px) {
+                font-weight: 500;
+                font-size: 20px;
+                line-height: 24px;
+                margin-bottom: 9px;
+                color: #fff;
+                max-width: 58%;
+            }
+        }
+
+        & .services-card__text {
+            font-size: 2.6rem;
+            line-height: 1.23em;
+            letter-spacing: -0.025em;
+            margin-bottom: 2.4rem;
+
+            @media (max-width: $md3+px) {
+                font-size: 14px;
+                line-height: 20px;
+                margin-bottom: 8px;
+                max-width: 58%;
+                color: #fff;
+            }
+        }
+
+        & .services-card__label {
+            @media (max-width: $md3+px) {
+                display: none;
+            }
+        }
+
+        & .services-card__btn {
+            margin-bottom: auto;
+            min-width: 33.8rem;
+
+            @media (max-width: $md3+px) {
+                min-width: none;
+                margin-top: 16px;
             }
         }
     }
