--- a/#src/scss/base.scss
+++ b/#src/scss/base.scss
@@ -49,7 +49,6 @@ body {
 	position: relative;
 	min-height: 100%;
 	background-color: #f0f0f0;
-	height: 100%;
 
 	@media (max-width: $md3+px) {
 		font-size: 16px;
@@ -184,9 +183,11 @@ figure {
 	margin-bottom: 1.5em;
 }
 
-._page {
+.wrapper {
 	overflow: hidden;
-	min-height: 100%;
+}
+
+._page {
 	position: relative;
 	z-index: 3;
 }
@@ -243,7 +244,7 @@ figure {
 }
 
 [data-filter-content] {
-	animation: filterContentAnim .4s ease-in-out;
+	animation: filterContentAnim 0.4s ease-in-out;
 }
 
 @keyframes filterContentAnim {
@@ -285,7 +286,6 @@ figure {
 }
 
 [data-padding-top-header-size] {
-	
 	@media (min-width: 992px) {
 		padding-top: 19.2rem !important;
 	}
@@ -350,6 +350,10 @@ figure {
 	color: $secondColor !important;
 }
 
+.text-warning {
+	color: $warningColor !important;
+}
+
 .bg-primary {
 	background: $mainColor !important;
 }
@@ -376,6 +380,9 @@ figure {
 
 .bg-light {
 	background: $lightColor !important;
+}
+.bg-warning {
+	background: $warningColor !important;
 }
 
 .order-6 {
@@ -427,7 +434,8 @@ figure {
 			}
 		}
 
-		& img, & svg {
+		& img,
+		& svg {
 			width: 3.2rem;
 			height: 3.2rem;
 
@@ -502,6 +510,85 @@ figure {
 	}
 }
 
+.label {
+	display: inline-flex;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+	border-radius: 100px;
+	color: #fff;
+	padding: 1.2rem 2.4rem;
+	font-weight: 600;
+	font-size: 1.6rem;
+	line-height: 1em;
+	letter-spacing: -0.025em;
+	align-self: flex-start;
+}
+
+.box {
+	background-color: #fff;
+	padding: 4rem;
+	border-radius: 2.4rem;
+
+	@media (max-width: $md3+px) {
+		padding: 16px 12px;
+		border-radius: 16px;
+	}
+
+	&--has-text {
+		@media (max-width: $md3+px) {
+			padding: 40px 12px;
+		}
+	}
+}
+
+.links-group {
+	padding-left: 0;
+	display: flex;
+	flex-wrap: wrap;
+	margin-bottom: -2.4rem;
+
+	@media (max-width: $md3+px) {
+		margin-bottom: -16px;
+	}
+
+
+	& > li {
+		margin-bottom: 2.4rem;
+
+		@media (max-width: $md3+px) {
+			margin-bottom: 16px;
+		}
+
+		&:not(:last-child) {
+			margin-right: 4rem;
+
+			@media (max-width: $md3+px) {
+				margin-right: 16px;
+			}
+		}
+	}
+
+	& a {
+		font-size: 2rem;
+		line-height: 1.4em;
+		letter-spacing: -0.025em;
+		color: $secondColor;
+		text-decoration: underline dashed;
+
+		@media (max-width: $md3+px) {
+			font-weight: 500;
+			font-size: 14px;
+			line-height: 18px;
+		}
+	}
+}
+
+.last {
+	& > *:last-child {
+		margin-bottom: 0;
+	}
+}
 // === TEXT CONTETN BLOCK ========================================================================
 .text-content {
 	&--md {
