--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -62,6 +62,7 @@
 @import "../common/services-side-panel/services-side-panel";
 @import "../common/cta-card/cta-card";
 @import "../common/certificates/certificates";
+@import "../common/stock-card/stock-card";
 // ==== // COMMON BLOCKS =====================================================
 
 // ==== PAGES =====================================================
@@ -71,5 +72,6 @@
 @import "pages/testimonials";
 @import "pages/services-detail";
 @import "pages/team-detail";
+@import "pages/stock";
 // ==== AND PAGES =====================================================
 
