--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -63,6 +63,7 @@
 @import "../common/cta-card/cta-card";
 @import "../common/certificates/certificates";
 @import "../common/stock-card/stock-card";
+@import "../common/faq-list/faq-list";
 // ==== // COMMON BLOCKS =====================================================
 
 // ==== PAGES =====================================================
@@ -73,5 +74,6 @@
 @import "pages/services-detail";
 @import "pages/team-detail";
 @import "pages/stock";
+@import "pages/faq";
 // ==== AND PAGES =====================================================
 
