--- a/#src/common/quiz/quiz.scss
+++ b/#src/common/quiz/quiz.scss
@@ -5,6 +5,8 @@
         }
     }
     &__head {
+        animation: fadeInUp .4s ease-in-out forwards;
+
         @media (min-width: 768px) {
             display: flex;
             justify-content: space-between;
@@ -25,7 +27,10 @@
 
     &__content {
         display: none;
+        animation: fadeInUp .4s ease-in-out forwards;
     }
+
+
 
     &__content-body {
         display: flex;
@@ -70,11 +75,11 @@
 .quiz-content-card {
     background: #ffffff;
     border-radius: 4rem;
-    padding: 4rem 3.2rem 6rem;
+    padding: 4rem 3.2rem 4rem;
     height: 100%;
-    transition: all .3s ease;
-
-
+    transition: all 0.3s ease;
+    display: flex;
+    flex-direction: column;
 
     @media (max-width: $md3+px) {
         padding: 24px 16px;
@@ -91,7 +96,7 @@
 
     &__price-list {
         padding-left: 0;
-        margin-bottom: 0;
+        margin-bottom: 1.6rem;
         & > li {
             padding: 1.6rem 0;
             border-top: 1px solid $borderColor;
@@ -127,7 +132,7 @@
 
     &__posts {
         padding-left: 0;
-        margin-bottom: 0;
+        margin-bottom: 1.6rem;
 
         & > li {
             display: flex;
@@ -165,7 +170,6 @@
         @media (max-width: $md3+px) {
             font-size: 14px;
         }
-        
     }
 
     &__posts-title {
@@ -205,6 +209,17 @@
         }
     }
 
+    &__link {
+        font-weight: 500;
+        font-size: 1.6rem;
+        line-height: 1.5em;
+        letter-spacing: -0.025em;
+        color: $secondColor !important;
+        text-decoration: underline;
+        display: block;
+        margin-top: auto;
+    }
+
     & .cta__form-items {
         max-width: 37.4rem;
     }
@@ -229,11 +244,11 @@
     padding: 3.9em 2.4em;
     color: #fff;
     cursor: pointer;
-    transition: all .15s ease-in-out;
+    transition: all 0.15s ease-in-out;
 
     @media (min-width: 992px) {
         &:hover {
-            box-shadow: 0 0 15px rgba($secondColor, 0.2);
+            box-shadow: 0 0 15px rgba($secondColor, 0.4);
         }
     }
 
@@ -259,7 +274,6 @@
         z-index: -1;
         opacity: 0;
         visibility: hidden;
-
     }
 
     &__img {
@@ -336,5 +350,16 @@
             font-size: 18px;
             line-height: 23px;
         }
+    }
+}
+
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
     }
 }
