--- a/#src/common/gallery/gallery.scss
+++ b/#src/common/gallery/gallery.scss
@@ -11,7 +11,20 @@
         margin: 0 -20px;
         padding: 0 20px;
     }
-    &__title {
+    &__title:not(.mb-3) {
+        margin-bottom: 4rem;
+
+        @media (max-width: $md3+px) {
+            margin-bottom: 16px;
+        }
+    }
+
+    & h3.gallery__title {
+        @media (max-width: $md3+px) {
+            font-weight: 600;
+            font-size: 28px;
+            line-height: 32px;
+        }
     }
 
     & .swiper {
@@ -27,11 +40,11 @@
         @media (max-width: $md3+px) {
             padding-right: 1.8rem;
         }
-    }   
+    }
 
     &__carousel {
         position: relative;
-        
+
         @media (min-width: 992px) {
             padding: 0 4.8rem;
         }
@@ -48,7 +61,7 @@
         width: 3.2rem;
         border-radius: 50%;
         background-color: $secondColor;
-        transition: all .15s ease-in-out;
+        transition: all 0.15s ease-in-out;
         color: #fff;
         cursor: pointer;
 
@@ -67,7 +80,7 @@
             width: auto;
         }
 
-        &.prev{
+        &.prev {
             left: 0;
         }
 
@@ -82,6 +95,14 @@
 
         @media (max-width: $md3+px) {
             width: 227px;
+        }
+    }
+
+    &--big {
+        & .gallery__img {
+            @media (min-width: 768px) {
+                width: 28.6rem;
+            }
         }
     }
 }
