--- a/#src/common/header/header.scss
+++ b/#src/common/header/header.scss
@@ -13,7 +13,7 @@
     
     &--is-scroll {
         background-color: #fff;
-
+        box-shadow: 0px 0px 20px rgba($textColor, 0.2);
         & .header__row-1-body {
             @media (min-width: 992px) {
                 padding-top: 0.6rem;
