--- a/#src/common/video/video.scss
+++ b/#src/common/video/video.scss
@@ -56,3 +56,36 @@
 		}
 	}
 }
+
+
+.video-wrap {
+	height: 0;
+	padding-bottom: 48.26%;
+	background-color: #fff;
+	border-radius: 4rem;
+	overflow: hidden;
+	position: relative;
+
+	@media (max-width: $md3+px) {
+		border-radius: 24px;
+		padding-bottom: 61.72%;
+	}
+
+	& iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 1;
+	}
+
+	& video {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 1;
+	}
+}
