--- a/#src/common/pagination/pagination.scss
+++ b/#src/common/pagination/pagination.scss
@@ -1,37 +1,37 @@
 .pagination {
+    padding-top: 5.6rem;
     display: flex;
+    align-items: center;
     justify-content: center;
 
+    @media (max-width: $md3+px) {
+        padding-top: 42px;
+    }
+
     &__arrow {
-        height: 5rem;
-        width: 5rem;
+        height: 3.2rem;
+        width: 3.2rem;
         border-radius: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: $lightColor;
-        color: $textColor;
-        transition: all .3s ease;
+        background-color: $secondColor;
+        color: #fff !important;
+        transition: all 0.15s ease-in-out;
         font-size: 1.8rem;
         cursor: pointer;
         flex: 0 0 auto;
 
         @media (max-width: $md3+px) {
+            width: 24px;
+            height: 24px;
             font-size: 14px;
-            height: 36px;
-            width: 36px;
         }
 
         @media (min-width: 992px) {
             &:hover {
-                color: $lightColor !important;
-                background-color: $hover;
+                opacity: 0.7;
             }
-        }
-
-        &:active {
-            color: $lightColor !important;
-            background-color: $active !important;
         }
 
         & svg {
@@ -41,69 +41,30 @@
     }
 
     &__list {
-        margin: 0 2rem;
+        margin: 0 2.4rem;
         display: flex;
         padding-left: 0;
 
-        @media (max-width: $md3+px) {
-            margin: 0 15px;
-        }
-
         & > li {
-            height: 5rem;
-            min-width: 5rem;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: $lightColor;
             color: $textColor;
-            flex: 0 0 auto;
-            text-align: center;
-            transition: all .3s ease;
+            font-size: 1.8rem;
+            line-height: 1.56em;
 
             @media (max-width: $md3+px) {
-                height: 36px;
-                min-width: 36px;
-                font-size: 14px;
+                font-size: 16px;
+                line-height: 28px;
             }
 
             &:not(:last-child) {
-                margin-right: 0.6rem;
-
-                @media (max-width: $md3+px) {
-                    margin-right: 4px;
-                }
-            }
-
-            @media (min-width: 992px) {
-                &:hover:not(.dots) {
-                    color: $lightColor !important;
-                    background-color: $hover;
-                }
-            }
-    
-            &:active:not(.dots) {
-                color: $lightColor !important;
-                background-color: $active !important;
+                margin-right: 1.6rem;
             }
         }
     }
 
     &__item {
-        color: inherit !important;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        height: 100%;
-        min-width: 5rem;
-        padding: 1rem 1rem;
-        transition: all 0s ease;
-
-        @media (max-width: $md3+px) {
-            min-width: 36px;
-            padding: 6px 8px;
+        &.active {
+            color: $textColorSecondary;
+            text-decoration: underline;
         }
     }
 }
