--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -82,5 +82,6 @@
 @import "pages/portfolio";
 @import "pages/patient-history";
 @import "pages/articles";
+@import "pages/contact";
 // ==== AND PAGES =====================================================
 
