--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -83,5 +83,7 @@
 @import "pages/patient-history";
 @import "pages/articles";
 @import "pages/contact";
+@import "pages/technology";
+@import "pages/prices";
 // ==== AND PAGES =====================================================
 
