--- a/#src/common/testimonials/testimonials.scss
+++ b/#src/common/testimonials/testimonials.scss
@@ -8,6 +8,12 @@
     &__mob-btn {
 
     }
+
+    &--showed {
+        & .testimonials__bottom {
+            display: none;
+        }
+    }
 }
 
 .testimonials-list {
