--- a/#src/common/cta/cta.scss
+++ b/#src/common/cta/cta.scss
@@ -13,12 +13,12 @@
     }
 
     &__col-1 {
-        flex: 0 0 57.2%;
-        padding: 8rem 4rem 8rem 11.5rem;
+        flex: 0 0 55.2%;
+        padding: 8rem 2rem 8rem 11.5rem;
 
         @media (max-width: $md2+px) {
             padding: 0;
-            margin-bottom: 53px;
+            margin-bottom: 80px;
         }
     }
 
@@ -40,6 +40,7 @@
         left: 0;
         bottom: 0;
         width: 100%;
+        max-width: 65.3rem;
         height: calc(100% + 9.8rem);
         padding: 0 1rem;
         display: flex;
@@ -48,6 +49,7 @@
 
         @media (max-width: $md2+px) {
             height: calc(100% + 4rem);
+            max-width: none;
         }
 
         & img {
@@ -99,7 +101,7 @@
         }
 
         &:last-child {
-            margin-bottom: -2.4rem;
+            margin-bottom: -2.4rem !important;
 
             @media (max-width: $md2+px) {
                 margin-bottom: 0;
