--- a/#src/common/team-card/team-card.scss
+++ b/#src/common/team-card/team-card.scss
@@ -59,6 +59,10 @@
         justify-content: center;
         align-items: flex-end;
 
+        @media (max-width: $md2+px) {
+            height: calc(100% - 20px);
+        }
+
         @media (max-width: $md3+px) {
             height: auto;
             width: 235px;
