--- a/#src/common/testimonials/testimonials.scss
+++ b/#src/common/testimonials/testimonials.scss
@@ -16,6 +16,14 @@
     }
 }
 
+.testimonial-list-wrap {
+    @media (max-width: $md3+px) {
+        & .buttons-group {
+            margin-bottom: 12px;
+        }
+    }
+}
+
 .testimonials-list {
     padding-left: 0;
     margin: 0 -1.2rem -2.4rem;
@@ -23,6 +31,10 @@
     display: flex;
     flex-wrap: wrap;
     transition: all .3s ease;
+
+    @media (min-width: 768px) {
+        max-height: none !important;
+    }
 
     @media (max-width: $md3+px) {
         margin-bottom: -8px;
@@ -39,7 +51,7 @@
 
         @media (max-width: $md3+px) {
             flex: 0 1 100%;
-            margin-bottom: 8px;
+            margin-bottom: 16px;
         }
     }
 }
