--- a/#src/common/buttons/buttons.scss
+++ b/#src/common/buttons/buttons.scss
@@ -112,11 +112,13 @@
 .buttons-group {
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 1.6rem;
+    margin-bottom: 4rem;
     padding-left: 0;
+    gap: 2.4rem;
 
     @media (max-width: $md3+px) {
-        margin-bottom: 20px;
+        margin-bottom: 32px;
+        gap: 12px 8px;
     }
 
     & + .team-list {
@@ -124,17 +126,6 @@
     }
 
     & > li {
-        margin-bottom: 2.4rem;
 
-        @media (max-width: $md3+px) {
-            margin-bottom: 12px;
-        }
-        &:not(:last-child) {
-            margin-right: 2.4rem;
-
-            @media (max-width: $md3+px) {
-                margin-right: 8px;
-            }
-        }
     }
 }
