--- a/#src/common/cta/cta.scss
+++ b/#src/common/cta/cta.scss
@@ -128,7 +128,6 @@
 
         &--half {
             flex: 0 1 calc(50% - 1.2rem);
-
         }
     }
 
@@ -136,9 +135,17 @@
     }
 
     &--feedback {
+        @media (max-width: $md3+px) {
+            background-color: #fff;
+            margin-top: -32px;
+        }
 
         & .cta__inner {
             padding-top: 0;
+
+            @media (max-width: $md3+px) {
+                padding-top: 32px;
+            }
         }
 
         & .cta__title {
@@ -165,6 +172,12 @@
 
             @media (min-width: 768px) {
                 margin-bottom: 2rem;
+            }
+
+            @media (max-width: $md3+px) {
+                font-size: 16px;
+                line-height: 24px;
+                margin-bottom: 24px;
             }
         }
 
