--- a/#src/common/team-list/team-list.scss
+++ b/#src/common/team-list/team-list.scss
@@ -4,8 +4,8 @@
     display: flex;
     flex-wrap: wrap;
 
-    @media (max-width: $md3+px) {
-        margin-bottom: -24px;
+    @media (max-width: $md2+px) {
+        margin-bottom: 0;
     }
 
     & > li {
@@ -15,6 +15,13 @@
 
         @media (max-width: $md2+px) {
             flex: 0 1 100%;
+            margin-bottom: 72px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+        @media (max-width: $md3+px) {
             margin-bottom: 24px;
         }
     }
