--- a/#src/scss/pages/articles.scss
+++ b/#src/scss/pages/articles.scss
@@ -36,7 +36,7 @@
         @media (max-width: $md3+px) {
             font-size: 16px;
             line-height: 21px;
-            margin-bottom: 8px;
+            margin-bottom: 7px;
         }
     }
 
@@ -47,7 +47,7 @@
         @media (max-width: $md2+px) {
             display: flex;
             flex-wrap: wrap;
-            gap: 16px;
+            gap:9px 16px;
         }
 
         & > li {
